// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react theme renderer tests renderThemeJson should render theme json successfully 1`] = `
"{
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
}"
`;

exports[`react theme renderer tests theme should render the default theme 1`] = `
"/* eslint-disable */
import { createTheme, defaultTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme(defaultTheme);
"
`;

exports[`react theme renderer tests theme should render the theme 1`] = `
"/* eslint-disable */
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`react theme renderer tests theme should render the theme with ES5 1`] = `
"/* eslint-disable */
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`react theme renderer tests theme should render the theme with ES5 2`] = `
"declare const _default: any;
export default _default;
"
`;

exports[`react theme renderer tests theme should render the theme with TSX 1`] = `
"/* eslint-disable */
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;
